# symbiotic_transformers

./: .gitignore  README.md  a_tale_of_compression.ipynb  pyproject.toml  requirements.txt  setup.cfg
recipes/: recipes_small.txt
src/symbiotic_transformers/cuisine_school/: brain_anatomy.py  chef.py  chef_config.py  chef_gpt_brain.py  recipe_reader.py
src/symbiotic_transformers/tasks/: become_a_master_chef.py  become_a_master_chef_at_scale.py  generate_recipes.py
symbiotic_transformers/cuisine_school/: recipe_reader.py
tasks/: chef_config.py  recipe_reader.py
tests/: test_train_step.py
vocab/tokenizer/: vocabulary.txt
