[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "symbiotic-transformers"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "orbax",
    "tensorflow",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = ["ipykernel", "pytest"]
